--- a/views/item_form.pug
+++ b/views/item_form.pug
@@ -40,7 +40,7 @@ block content
             if pass_check === false
               ol.errors-msg
                 li!= 'Wrong admin password!'
-        button.btn(type='submit') Submit
+        button.btn-submit(type='submit') Submit
 
       if errors
         ol.errors-msg
