--- a/views/category_form.pug
+++ b/views/category_form.pug
@@ -6,18 +6,18 @@ block content
       h1= title
       form(method='POST' action='') 
         label(for='name') Name:
-          input#name(type='text' name='name' minlength=3 maxlength=15 value=(category===undefined ? '' : category.name) placeholder='Category name' required='true')
+        input#name(type='text' name='name' minlength=3 maxlength=15 value=(category===undefined ? '' : category.name) placeholder='Category name' required='true')
         label(for='description') Description:
-          textarea#description(type='text' name='description' rows=7 maxlength=200 placeholder='Category description') #{category===undefined ? '' : category.description}
+        textarea#description(type='text' name='description' rows=7 maxlength=200 placeholder='Category description') #{category===undefined ? '' : category.description}
         if category
           if category.permanent
             input#categoryispermanent(type='hidden' name='categoryispermanent' value='true')
             label(for='adminpass') This is an original shop category. You need admin password to update it:
-              input#adminpass(type='password' name='adminpass' minlength=1 placeholder='Admin password' required='true')
+            input#adminpass(type='password' name='adminpass' minlength=1 placeholder='Admin password' required='true')
             if pass_check === false
               ol.errors-msg
                 li!= 'Wrong admin password!'
-        button.btn(type='submit') Submit
+        button.btn-submit(type='submit') Submit
 
       if errors
         ol.errors-msg
