--- a/views/item_list.pug
+++ b/views/item_list.pug
@@ -9,16 +9,17 @@ block content
             img(src=`/uploads/images/${item.imgName}`)
         else
           div.item-no-img
-        div.item-data
-          h1 #{item.name}
-          p #{item.description}
-        div.item-status
-          div.item-price
-            h2 Price:
-            h2 #{item.check_price}
-          div.item-stock
-            h3 Stock:
-            h3 #{item.check_stock}
+        div.item-details
+          div.item-data
+            h1 #{item.name}
+            p #{item.description}
+          div.item-status
+            div.item-price
+              h2 Price:
+              h2 #{item.check_price}
+            div.item-stock
+              h3 Stock:
+              h3 #{item.check_stock}
     div.item.item-add
       a(href='/item/create')
         h1 Add new item
