--- a/views/item_details.pug
+++ b/views/item_details.pug
@@ -22,7 +22,7 @@ block content
         div.item-controls
           a(href=`.${item.url}/update`)
             div.btn-control Update item
-          a(href=`.${item.url}/image/delete`)
-            div.btn-control.btn-delete Delete image
+          a(href=`.${item.url}/image-delete`)
+            div.btn-control Delete image
           a(href=`.${item.url}/delete`)
             div.btn-control Delete item
