--- a/views/item_delete.pug
+++ b/views/item_delete.pug
@@ -7,12 +7,10 @@ block content
         h1 #{title}: #{item.name}
         p Are you sure you want to delete #{item.name} item?
         form(method='POST' action='')
-          input#itemid(type='hidden' name='itemid' required='true' value=item._id)
-          input#itemimagename(type='hidden' name='itemimagename' required='true' value=item.imgName)
           if item.permanent
             input#itemispermanent(type='hidden' name='itemispermanent' value='true')
-            label(for='adminpass') This is an original shop item. You need to enter admin password to delete it:
-            input#adminpass(type='password' name='adminpass' minlength=1 placeholder='Admin password' required='true')
+            label(for='adminpass') This is an original shop item. You need to enter admin password to perform this action:
+            input#adminpass(type='password' name='adminpass' minlength=1 maxlength=64 placeholder='Admin password' required='true')
             if pass_check === false
               ol.errors-msg
                 li!= 'Wrong admin password!'
