--- a/views/item_form.pug
+++ b/views/item_form.pug
@@ -6,7 +6,7 @@ block content
       h1= title
       form(method='POST' action='' enctype='multipart/form-data')
         label(for='name') Name:
-        input#name(type='text' name='name' minlength=3 maxlength=30 value=(item===undefined ? '' : item.name) placeholder='Item name')
+        input#name(type='text' name='name' minlength=3 maxlength=30 value=(item===undefined ? '' : item.name) placeholder='Item name' required='true')
         label(for='description') Description:
         textarea#description(type='text' name='description' rows=7 maxlength=200 placeholder='Item description') #{item===undefined ? '' : item.description}
         label(for='category') Category:
