--- a/views/item_delete.pug
+++ b/views/item_delete.pug
@@ -4,11 +4,12 @@ block content
   div.container
     div.item-delete
       div.delete-box
-        h1 #{title}: #{item.name}
-        p Are you sure you want to delete #{item.name} item?
+        div
+          h1 #{title}:
+          h1 #{item.name}
+        h3 Are you sure you want to delete this item?
         form(method='POST' action='')
           if item.permanent
-            input#itemispermanent(type='hidden' name='itemispermanent' value='true')
             label(for='adminpass') This is an original shop item. You need to enter admin password to perform this action:
             input#adminpass(type='password' name='adminpass' minlength=1 maxlength=64 placeholder='Admin password' required='true')
             if pass_check === false
