--- a/views/category_delete.pug
+++ b/views/category_delete.pug
@@ -37,6 +37,7 @@ block content
       else
         form(method='POST' action='')
           if category.permanent
+            input#categoryispermanent(type='hidden' name='categoryispermanent' value='true')
             label(for='adminpass') This is an original shop category. You need to enter admin password to perform this action:
             input#adminpass(type='password' name='adminpass' minlength=1 maxlength=64 placeholder='Admin password' required='true')
             if pass_check === false
