--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -60,8 +60,7 @@ nav > ul {
 }
 
 nav > ul > li {
-	margin-right: 48px;
-	margin-left: 12px;
+	margin-right: 24px;
 }
 
 nav header {
@@ -69,8 +68,18 @@ nav header {
 	font-size: 3rem;
 	font-weight: 600;
 	flex: 4;
+	margin: auto;
+	text-transform: uppercase;
 	font-style: italic;
 	color: var(--custom-white);
+}
+
+@media only screen and (max-width: 992px) {
+	nav > ul {
+		flex-direction: column;
+		align-items: flex-start;
+		margin-left: 12px;
+	}
 }
 
 .dropdown-hover:hover > .dropdown {
@@ -81,7 +90,7 @@ nav header {
 	visibility: hidden;
 	position: absolute;
 	left: 0;
-	padding: 0 24px;
+	padding: 0 12px;
 	display: flex;
 	flex-direction: row;
 	background-color: var(--custom-red);
@@ -94,7 +103,6 @@ nav header {
 
 .dropdown > li {
 	padding: 12px;
-	margin-right: 6px;
 }
 
 .dropdown > li > a:hover {
@@ -120,6 +128,7 @@ nav header {
 	}
 
 	.dropdown > li {
+		width: 100%;
 		padding: 0;
 		margin-right: 0;
 		display: flex;
@@ -173,6 +182,48 @@ main {
 	padding: 40px 20px;
 }
 
+.container {
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+}
+
+.container .home-grid {
+	width: 75%;
+	padding: 24px;
+	display: grid;
+	grid-template-columns: repeat(3, 200px);
+	grid-auto-rows: 1fr;
+	justify-content: space-evenly;
+	grid-gap: 24px;
+	color: var(--custom-black);
+	background-image: url('/pictures/home_picture_f1_2022_car.png');
+	background-repeat: no-repeat;
+	background-size: contain;
+}
+
+.home-grid {
+	display: grid;
+	grid-template-columns: repeat(auto-fill, 400px);
+	grid-auto-rows: 1fr;
+	justify-content: space-evenly;
+	grid-gap: 24px;
+	color: var(--custom-black);
+}
+
+.home-grid > div {
+	display: flex;
+	flex-direction: column;
+	word-break: break-all;
+	width: 100%;
+	margin: auto;
+	filter: opacity(75%);
+}
+
+.grid-container .item:hover:not(.item-add, .category-controls) {
+	background-color: var(--custom-orange);
+}
+
 .grid-container {
 	display: grid;
 	grid-template-columns: repeat(auto-fill, 400px);
@@ -189,8 +240,7 @@ main {
 .item {
 	display: flex;
 	flex-direction: column;
-	width: 400px;
-	height: 400px;
+	min-height: 400px;
 	color: var(--custom-black);
 	background-color: var(--custom-blue);
 	border-radius: 12px;
@@ -489,21 +539,15 @@ select {
 	background-color: rgb(255, 255, 255);
 }
 
-.container {
-	display: flex;
-	flex-direction: row;
-	justify-content: center;
-}
-
-.container .grid-container {
-	justify-content: flex-start;
-	grid-template-columns: repeat(auto-fill, 400px);
-	margin: 24px 0;
-}
-
 .container .category-delete {
 	width: 100%;
 	padding: 0 12px;
+}
+
+.category-delete .grid-container {
+	justify-content: flex-start;
+	grid-template-columns: repeat(auto-fill, 400px);
+	margin: 24px 0;
 }
 
 .category-delete .delete-box,
