--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -29,8 +29,7 @@ h3 {
 
 a {
 	text-decoration: none;
-	color: var(--custom-white);
-	transition: 0.3s ease-in-out;
+	transition: 0.2s ease-in-out;
 }
 
 nav {
@@ -38,9 +37,10 @@ nav {
 	display: flex;
 	flex-direction: row;
 	padding: 24px;
+	user-select: none;
 }
 
-nav ul a {
+nav * {
 	color: var(--custom-white);
 }
 
@@ -182,42 +182,79 @@ main {
 	padding: 40px 20px;
 }
 
+.container-home {
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	align-items: center;
+	max-width: 100vw;
+	max-height: 100vh;
+}
+
+.container-home .home-grid {
+	width: 100%;
+	height: 100%;
+	display: grid;
+	grid-template-columns: repeat(3, minmax(100px, 400px));
+	grid-auto-rows: minmax(100px, 1fr);
+	justify-content: space-evenly;
+	grid-gap: 24px;
+	/* background-image: url('/pictures/home_picture_f1_2022_car.png');
+	background-repeat: no-repeat;
+	background-size: cover;
+	object-fit: fill; */
+}
+
+.home-bg-pic {
+	position: absolute;
+	max-height: 100%;
+	max-width: 100%;
+	margin: 0 auto;
+	margin-bottom: 12px;
+}
+
+.home-bg-pic img {
+	display: block;
+	width: 100%;
+	height: 100%;
+}
+
+.home-grid > a {
+	display: flex;
+	flex-direction: column;
+	word-break: break-all;
+	margin: auto;
+	filter: opacity(90%);
+	padding: 4px;
+}
+
+.home-grid > a:hover {
+	filter: brightness(105%);
+}
+
+.home-grid > a.others {
+	width: 50%;
+	grid-column: span 3;
+	padding: 12px;
+}
+
+.home-grid .item-img {
+	max-height: 128px;
+	max-width: 128px;
+	margin: 0 auto;
+	margin-bottom: 4px;
+}
+
+.home-grid .item-img img {
+	display: block;
+	width: 100%;
+	height: 100%;
+}
+
 .container {
 	display: flex;
 	flex-direction: row;
 	justify-content: center;
-}
-
-.container .home-grid {
-	width: 75%;
-	padding: 24px;
-	display: grid;
-	grid-template-columns: repeat(3, 200px);
-	grid-auto-rows: 1fr;
-	justify-content: space-evenly;
-	grid-gap: 24px;
-	color: var(--custom-black);
-	background-image: url('/pictures/home_picture_f1_2022_car.png');
-	background-repeat: no-repeat;
-	background-size: contain;
-}
-
-.home-grid {
-	display: grid;
-	grid-template-columns: repeat(auto-fill, 400px);
-	grid-auto-rows: 1fr;
-	justify-content: space-evenly;
-	grid-gap: 24px;
-	color: var(--custom-black);
-}
-
-.home-grid > div {
-	display: flex;
-	flex-direction: column;
-	word-break: break-all;
-	width: 100%;
-	margin: auto;
-	filter: opacity(75%);
 }
 
 .grid-container .item:hover:not(.item-add, .category-controls) {
@@ -230,7 +267,6 @@ main {
 	grid-auto-rows: 1fr;
 	justify-content: space-evenly;
 	grid-gap: 24px;
-	color: var(--custom-black);
 }
 
 .grid-container .item:hover:not(.item-add, .category-controls) {
@@ -336,8 +372,8 @@ main {
 	justify-content: center;
 }
 
-.item.category-controls button,
-.item.item-add button {
+.item.category-controls a,
+.item.item-add a {
 	width: 100%;
 	font-size: 1.5rem;
 }
@@ -430,7 +466,6 @@ main {
 }
 
 .item-controls > * {
-	color: var(--custom-black);
 	margin: 12px;
 }
 
@@ -550,9 +585,12 @@ select {
 	margin: 24px 0;
 }
 
-.category-delete .delete-box,
-.category-delete form {
+.category-delete .delete-box {
 	max-width: 500px;
+}
+
+.category-delete form {
+	max-width: 400px;
 }
 
 .category-delete form {
@@ -572,7 +610,6 @@ select {
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
-	cursor: pointer;
 	margin: 12px;
 }
 
@@ -583,9 +620,11 @@ select {
 .btn-submit,
 .btn-control {
 	text-transform: uppercase;
+	text-align: center;
 	font-weight: 600;
 	font-size: 1rem;
 	border: none;
+	color: var(--custom-black);
 	background-color: var(--custom-orange);
 	border-radius: 4px;
 	padding: 12px 20px;
