Minor text update

--- a/views/category_form.pug
+++ b/views/category_form.pug
@@ -12,7 +12,7 @@ block content
         if category
           if category.permanent
             input#categoryispermanent(type='hidden' name='categoryispermanent' value='true')
-            label(for='adminpass') This is an original shop category. You need to enter admin password to perform this action:
+            label(for='adminpass') This is an original shop category. Admin password is required for this action:
             input#adminpass(type='password' name='adminpass' minlength=1 maxlength=64 placeholder='Admin password' required='true')
             if pass_check === false
               ol.errors-msg
