--- a/views/item_delete.pug
+++ b/views/item_delete.pug
@@ -11,7 +11,7 @@ block content
         form(method='POST' action='')
           if item.permanent
             input#itemispermanent(type='hidden' name='itemispermanent' value='true')
-            label(for='adminpass') This is an original shop item. You need to enter admin password to perform this action:
+            label(for='adminpass') This is an original shop item. Admin password is required for this action:
             input#adminpass(type='password' name='adminpass' minlength=1 maxlength=64 placeholder='Admin password' required='true')
             if pass_check === false
               ol.errors-msg
