--- a/views/item_list.pug
+++ b/views/item_list.pug
@@ -21,11 +21,8 @@ block content
               h3 Stock:
               h3 #{item.check_stock}
     div.item.item-add
-      a(href='/item/create')
-        button.btn-control Add new item
+      a.btn-control(href='/item/create') Add new item
     if category
       div.item.category-controls
-        a(href=`${category.url}/update`)
-          button.btn-control Update category
-        a(href=`${category.url}/delete`)
-          button.btn-control.btn-delete Delete category
+        a.btn-control(href=`${category.url}/update`) Update category
+        a.btn-control.btn-delete(href=`${category.url}/delete`) Delete category
