--- a/views/category_form.pug
+++ b/views/category_form.pug
@@ -9,14 +9,13 @@ block content
         input#name(type='text' name='name' minlength=3 maxlength=15 value=(category===undefined ? '' : category.name) placeholder='Category name' required='true')
         label(for='description') Description:
         textarea#description(type='text' name='description' rows=7 maxlength=200 placeholder='Category description') #{category===undefined ? '' : category.description}
-        if category
-          if category.permanent
-            input#categoryispermanent(type='hidden' name='categoryispermanent' value='true')
-            label(for='adminpass') This is an original shop category. Admin password is required for this action:
-            input#adminpass(type='password' name='adminpass' minlength=1 maxlength=64 placeholder='Admin password' required='true')
-            if pass_check === false
-              ol.errors-msg
-                li!= 'Wrong admin password!'
+        if category && category.permanent
+          input#categoryispermanent(type='hidden' name='categoryispermanent' value='true')
+          label(for='adminpass') This is an original shop category. Admin password is required for this action:
+          input#adminpass(type='password' name='adminpass' minlength=1 maxlength=64 placeholder='Admin password' required='true')
+          if pass_check === false
+            ol.errors-msg
+              li!= 'Wrong admin password!'
         button.btn-submit(type='submit') Submit
 
       if errors
