--- a/views/image_delete.pug
+++ b/views/image_delete.pug
@@ -9,7 +9,7 @@ block content
           h1 #{item.name}
         h3 Are you sure you want to delete this image?
         form(method='POST' action='')
-          if item.permanent
+          if item && item.permanent
             input#itemispermanent(type='hidden' name='itemispermanent' value='true')
             label(for='adminpass') This is an original shop item. Admin password is required for this action:
             input#adminpass(type='password' name='adminpass' minlength=1 maxlength=64 placeholder='Admin password' required='true')
