--- a/views/index.pug
+++ b/views/index.pug
@@ -6,7 +6,7 @@ block content
       div.home-bg-pic
         img(src='/pictures/home_picture_f1_2022_car.png')
       each category in nav_category_list
-        if category.permanent
+        if category && category.permanent
           a.btn-control(href=category.url)
             img.item-img(src=`/pictures/home_${category.name.toLowerCase()}_pic.jpg`)
             | #{category.name}
