--- a/views/item_delete.pug
+++ b/views/item_delete.pug
@@ -9,7 +9,7 @@ block content
           h1 #{item.name}
         h3 Are you sure you want to delete this item?
         form(method='POST' action='')
-          if item.permanent
+          if item && item.permanent
             input#itemispermanent(type='hidden' name='itemispermanent' value='true')
             label(for='adminpass') This is an original shop item. Admin password is required for this action:
             input#adminpass(type='password' name='adminpass' minlength=1 maxlength=64 placeholder='Admin password' required='true')
@@ -22,7 +22,7 @@ block content
             a(href=`..${item.url}`)
               button.btn-control.btn-cancel(type='button') Cancel
       div.item
-        if item.imgName
+        if item && item.imgName
           div.item-img
             img(src=`/uploads/images/${item.imgName}`)
         else
