--- a/views/item_form.pug
+++ b/views/item_form.pug
@@ -25,14 +25,12 @@ block content
         input#price(type='number' step=0.01 name='price' min=0 max=9999999.99 value=(item===undefined ? '' : item.price) placeholder='Item price in dollars' required='true')
         label(for='stock') Stock:
         input#stock(type='number' name='stock' min=0 max=9999 value=(item===undefined ? '' : item.stock) placeholder='Item stock' required='true')
-        if item
-          if item.imgName
+        if item && item.imgName
             div.item-img
               img(src=`/uploads/images/${item.imgName}`)
         label(for='picture') Picture:
         input#picture(type='file' name='picture')
-        if item
-          if item.permanent
+        if item && item.permanent
             input#itemispermanent(type='hidden' name='itemispermanent' value='true')
             label(for='adminpass') This is an original shop item. Admin password is required for this action:
             input#adminpass(type='password' name='adminpass' minlength=1 maxlength=64 placeholder='Admin password' required='true')
