Renaming btn class

--- a/views/item_list.pug
+++ b/views/item_list.pug
@@ -25,4 +25,4 @@ block content
     if category
       div.item.category-controls
         a.btn-control(href=`${category.url}/update`) Update category
-        a.btn-control.btn-delete(href=`${category.url}/delete`) Delete category
+        a.btn-control.btn-danger(href=`${category.url}/delete`) Delete category
