Cleanup, renaming btn class, adding goBack Id for new script calling history.back() method

--- a/views/category_delete.pug
+++ b/views/category_delete.pug
@@ -44,7 +44,5 @@ block content
               ol.errors-msg
                 li!= 'Wrong admin password!'
           div.delete-controls
-            a
-              button.btn-control.btn-delete(type='submit') Delete
-            a(href=category.url)
-              button.btn-control.btn-cancel(type='button') Cancel
+            button.btn-control.btn-danger(type='submit') Delete
+            button#goBack.btn-control.btn-cancel(type='button') Cancel
