--- a/views/item_form.pug
+++ b/views/item_form.pug
@@ -37,7 +37,12 @@ block content
             if pass_check === false
               ol.errors-msg
                 li!= 'Wrong admin password!'
-        button.btn-submit(type='submit') Submit
+        if item
+          div.form-controls
+            button.btn-submit(type='submit') Submit
+            button#goBack.btn-submit.btn-danger(type='button') Cancel
+        else
+          button.btn-submit(type='submit') Submit
 
       if errors
         ol.errors-msg
