Cleanup, renaming btn class, adding goBack Id for new script calling history.back() method

--- a/views/category_form.pug
+++ b/views/category_form.pug
@@ -16,7 +16,12 @@ block content
           if pass_check === false
             ol.errors-msg
               li!= 'Wrong admin password!'
-        button.btn-submit(type='submit') Submit
+        if category
+          div.form-controls
+            button.btn-submit(type='submit') Submit
+            button#goBack.btn-submit.btn-danger(type='button') Cancel
+        else
+          button.btn-submit(type='submit') Submit
 
       if errors
         ol.errors-msg
