--- a/views/index.pug
+++ b/views/index.pug
@@ -2,9 +2,8 @@ extends layout
 
 block content
   div.container-home
+    img.home-bg-pic(src='/pictures/home_picture_f1_2022_car.png')
     div.home-grid
-      div.home-bg-pic
-        img(src='/pictures/home_picture_f1_2022_car.png')
       each category in nav_category_list
         if category && category.permanent
           a.btn-control(href=category.url)
