--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -194,36 +194,25 @@ main {
 	flex-direction: row;
 	justify-content: center;
 	align-items: center;
-	max-width: 100vw;
-	max-height: 100vh;
+	max-width: 100%;
+	max-height: 100%;
+	position: relative;
+}
+
+.home-bg-pic {
+	display: block;
+	width: 100%;
+	height: 100%;
 }
 
 .container-home .home-grid {
+	position: absolute;
 	width: 100%;
 	height: 100%;
 	display: grid;
 	grid-template-columns: repeat(3, minmax(100px, 400px));
-	grid-auto-rows: minmax(100px, 1fr);
 	justify-content: space-evenly;
 	grid-gap: 24px;
-	/* background-image: url('/pictures/home_picture_f1_2022_car.png');
-	background-repeat: no-repeat;
-	background-size: cover;
-	object-fit: fill; */
-}
-
-.home-bg-pic {
-	position: absolute;
-	max-height: 100%;
-	max-width: 100%;
-	margin: 0 auto;
-	margin-bottom: 12px;
-}
-
-.home-bg-pic img {
-	display: block;
-	width: 100%;
-	height: 100%;
 }
 
 .home-grid > a {
