--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -34,16 +34,20 @@ a {
 
 nav {
 	background-color: var(--custom-red);
+	position: sticky;
+	top: 0;
+	left: 0;
 	display: flex;
 	flex-direction: column;
 	user-select: none;
+	z-index: 100;
 }
 
 nav * {
 	color: var(--custom-white);
 }
 
-nav .nav-top {
+.nav-top {
 	display: flex;
 	flex-direction: row;
 	padding: 24px;
@@ -68,7 +72,7 @@ nav .nav-top {
 	margin-right: 24px;
 }
 
-.nav-top header {
+.nav-top .logo {
 	text-align: center;
 	font-size: 3rem;
 	font-weight: 600;
@@ -76,12 +80,13 @@ nav .nav-top {
 	margin: auto;
 	text-transform: uppercase;
 	font-style: italic;
-	color: var(--custom-white);
+	white-space: nowrap;
 }
 
 @media only screen and (max-width: 992px) {
-	.nav-top > ul {
+	.nav-top .category-list {
 		flex-direction: column;
+		justify-content: flex-end;
 		align-items: flex-start;
 		margin-left: 12px;
 	}
@@ -121,6 +126,7 @@ nav .nav-top {
 		background-color: var(--custom-red);
 		padding: 12px;
 		max-width: fit-content;
+		min-height: 400px;
 		max-height: 50%;
 		align-items: flex-end;
 		overflow-y: scroll;
@@ -186,6 +192,7 @@ nav .nav-top {
 }
 
 main {
+	min-width: fit-content;
 	padding: 40px 20px;
 }
 
@@ -197,28 +204,33 @@ main {
 	max-width: 100%;
 	max-height: 100%;
 	position: relative;
+	margin: 0 auto;
 }
 
 .home-bg-pic {
+	min-width: 480px;
+	position: absolute;
 	display: block;
 	width: 100%;
 	height: 100%;
+	z-index: -1;
 }
 
 .container-home .home-grid {
-	position: absolute;
+	min-width: 480px;
 	width: 100%;
 	height: 100%;
 	display: grid;
-	grid-template-columns: repeat(3, minmax(100px, 400px));
+	grid-template-columns: repeat(3, minmax(64px, 256px));
 	justify-content: space-evenly;
 	grid-gap: 24px;
+	padding: 24px;
 }
 
 .home-grid > a {
 	display: flex;
 	flex-direction: column;
-	word-break: break-all;
+	word-break: keep-all;
 	margin: auto;
 	filter: opacity(90%);
 	padding: 4px;
@@ -228,15 +240,9 @@ main {
 	filter: brightness(105%);
 }
 
-.home-grid > a.others {
-	width: 50%;
-	grid-column: span 3;
-	padding: 12px;
-}
-
 .home-grid .item-img {
-	max-height: 128px;
-	max-width: 128px;
+	height: 75%;
+	width: 100%;
 	margin: 0 auto;
 	margin-bottom: 4px;
 }
@@ -245,6 +251,12 @@ main {
 	display: block;
 	width: 100%;
 	height: 100%;
+}
+
+.home-grid .otherCategories {
+	grid-column: 1/4;
+	padding: 12px;
+	width: 100%;
 }
 
 .container {
