--- a/views/category_delete.pug
+++ b/views/category_delete.pug
@@ -42,7 +42,7 @@ block content
             input#adminpass(type='password' name='adminpass' minlength=1 maxlength=64 placeholder='Admin password' required='true')
             if pass_check === false
               ol.errors-msg
-                li!= 'Wrong admin password!'
+                li 'Wrong admin password!'
           div.delete-controls
             button.btn-control.btn-danger(type='submit') Delete
             button#goBack.btn-control.btn-cancel(type='button') Cancel
