--- a/views/item_form.pug
+++ b/views/item_form.pug
@@ -36,7 +36,7 @@ block content
             input#adminpass(type='password' name='adminpass' minlength=1 maxlength=64 placeholder='Admin password' required='true')
             if pass_check === false
               ol.errors-msg
-                li!= 'Wrong admin password!'
+                li 'Wrong admin password!'
         if item
           div.form-controls
             button.btn-submit(type='submit') Submit
