--- a/views/layout.pug
+++ b/views/layout.pug
@@ -20,7 +20,7 @@ html
                 li
                   a(href='/category/create') + New category
         header.logo
-          a(href='/') Formula 1 Official Store
+          a(href='/')
       if nav_current_directory && nav_current_directory.length
         div.nav-bot
           ul.current-directory
